gitops/stage01-model-serving/authorino/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kserve-predictor
  namespace: istio-system
  labels:
    app.kubernetes.io/component: authorization
    app.kubernetes.io/part-of: stage01-model-serving
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  action: CUSTOM
  provider:
    name: redhat-ods-applications-auth-provider
  rules:
    - to:
        - operation:
            notPaths:
              - "/"
              - /app-health/queue-proxy/readyz
              - /app-health/agent/readyz
              - /healthz
              - /debug/pprof/
              - /metrics
              - /wait-for-drain
      when:
        - key: request.headers[":authority"]
          values:
            - mistral-24b-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
            - mistral-24b-quantized-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
  selector:
    matchLabels:
      component: predictor
